api/swim_form/src/tests/derive/form/newtype_enum.stderr
error: Cannot use `newtype` annotation with enums
 --> src/tests/derive/form/newtype_enum.rs:5:5
  |
5 | /     #[form(newtype)]
6 | |     enum A {
7 | |         B,
8 | |         C,
9 | |     }
  | |_____^
